build subscribtion page, fixed page shift when scroll bug

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -25,7 +25,9 @@
   position: fixed;
   z-index: 5
 }
-
+.fixedNavContentStyle {
+  margin-top: 117px !important
+}
 .drawBtn {
   margin: 6px 8px
 }
